--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -31,7 +31,14 @@
         .hiden-text{
             display: none;
         }
+        .button{
+            max-width: 40%;
+            font-size: 12px;
+            padding: 20px 40px;
+            text-align: center;
+        }
     }
+    
     #footer{
         width: 90%;
     }
