--- a/src/scss/components/partials.scss
+++ b/src/scss/components/partials.scss
@@ -14,7 +14,7 @@
     margin-bottom: 93px;
     
 }
-.container{
+.container_block{
     z-index: -2;
     margin: 0 auto;
     width: 100%;
@@ -31,13 +31,18 @@
 .brand-color{
     color: #DBAB00;
 }
-
-
+.carousel-control-next{
+    cursor: pointer;
+}
+.carousel-control-prev{
+    cursor: pointer;
+}
 @media only screen and (max-width: 768px) {
     .button{
-        max-width: 40%;
+        width: 40%;
         font-size: 12px;
         padding: 20px 40px;
         text-align: center;
+        box-sizing: content-box;
     }
 }
